--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">Caroline Sada</a>
+            <a class="navbar-brand name-navbar" href="#">Caroline Sada</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -239,25 +239,26 @@
                         <div class="row">
                             <div class="col-md-6">
                                 <div class="form-group">
-                                    <input type="text" id="name" name="Nombre" class="form-control" placeholder="Nombre"
-                                        required />
+                                    <input type="text" id="name" name="Nombre" class="form-control" placeholder="Nombre" required aria-label="Nombre" />
                                     <p class="help-block text-danger"></p>
                                 </div>
                             </div>
                             <div class="col-md-6">
                                 <div class="form-group">
-                                    <input type="email" id="email" name="Email" class="form-control" placeholder="Email"
-                                        required />
+                                    <input type="email" id="email" name="Email" class="form-control" placeholder="Email" required aria-label="Correo Electrónico" />
                                     <p class="help-block text-danger"></p>
                                 </div>
                             </div>
                         </div>
                         <div class="form-group">
-                            <textarea name="Mensaje" id="message" class="form-control" rows="4" placeholder="Mensaje"
-                                required></textarea>
+                            <textarea name="Mensaje" id="message" class="form-control" rows="4" placeholder="Mensaje" required aria-label="Mensaje"></textarea>
                             <p class="help-block text-danger"></p>
                         </div>
-                        <div id="success"></div>
+                        <div class="form-check mb-3">
+                            <input class="form-check-input" type="checkbox" id="myCheck" name="remember" required aria-label="Confirmación" />
+                            <label class="form-check-label" for="myCheck">¿Estás de acuerdo?</label>
+                        </div>
+                        <div id="success" role="alert" aria-live="assertive"></div>
                         <button type="submit" class="btn btn-custom btn-lg">
                             Enviar Mensaje
                         </button>
@@ -270,13 +271,22 @@
     <!-- Pie de página -->
     <footer class="bg-light text-center py-2">
         <div class="container">
-            <p>&copy; 2023 Caroline Sada</p>
+            <p>
+                &copy;
+                <span id="currentYear"></span>
+                Caroline Sada
+            </p>
         </div>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-        crossorigin="anonymous"></script>
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous">
+        </script>
+    <script>
+        var currentYearElement = document.getElementById("currentYear");
+        var currentYear = new Date().getFullYear();
+        currentYearElement.textContent = currentYear;
+    </script>
 </body>
 
 </html>
